--- a/templates/base.html
+++ b/templates/base.html
@@ -400,7 +400,7 @@
                             
                             <!-- Reports -->
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('supervisor.overtime_management') }}">
+                                <a class="nav-link" href="{{ url_for('supervisor.dashboard') }}">
                                     <i class="bi bi-graph-up"></i> Overtime
                                 </a>
                             </li>
